--- a/style.css
+++ b/style.css
@@ -24,3 +24,12 @@ h1 {
   margin-top: 4px;
   line-height: 2em;
 }
+
+.uploadfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
